--- a/project1/project-one-angular/src/styles.css
+++ b/project1/project-one-angular/src/styles.css
@@ -2,4 +2,6 @@
 
 body {
     background-image: url("app/login/background_2.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
